Fix dark mode not toggling correctly on load

--- a/src/components/atoms/button/regularButton/_index.scss
+++ b/src/components/atoms/button/regularButton/_index.scss
@@ -7,7 +7,7 @@
 }
 
 // Dark mode colors
-.page-container.dark {
+.dark {
   --button-shadow-color: rgba(0, 3, 10, 0.22);
 }
 
