--- a/src/components/molecules/actions/_index.scss
+++ b/src/components/molecules/actions/_index.scss
@@ -2,7 +2,7 @@
   --action-fore-color: #525252;
 }
 
-.page-container.dark {
+.dark {
   --action-fore-color: #bababa;
 }
 
