--- a/src/styles/_anchor.scss
+++ b/src/styles/_anchor.scss
@@ -4,7 +4,7 @@
 }
 
 // Dark mode colors
-.page-container.dark {
+.dark {
   --a-link-color: #6DC7FD;
 }
 
